# shapeviz

./: .gitignore  CHANGELOG.md  INSTRUCTIONS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: car.ply  quickstart.py  sample_viewer.html
src/shapeviz/: __init__.py  _version.py  cli.py  core.py  geometry.py  loaders.py  server.py  viewer.py
tests/: conftest.py  test_cli.py  test_geometry.py  test_loaders.py  test_viewer.py
